update swagger and products controller
